--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -26,7 +26,8 @@
                         <p class="text-portfolio">Task manager inspired by the Kanban System. Create and organize
                             tasks using drag and drop functions, assign users and categories. </p>
                         <div class="btn-right-portfolio">
-                            <button class="btn-bg-left">Live test</button>
+                            <a href="https://cristina-jordi.developerakademie.net/join/" target="_blank"><button
+                                    class="btn-bg-left">Live test</button></a>
                             <a href="https://github.com/Cristina-Jordi/join" target="_blank"><button
                                     class="btn-bg-right">Github</button></a>
                         </div>
@@ -43,7 +44,8 @@
                             approach. Help Pepe Peligroso to find coins and poisoned salsa bottles
                             to fight against the killer chickens. </p>
                         <div class="btn-left-portfolio">
-                            <button class="btn-bg-left">Live test</button>
+                            <a href="https://cristina-jordi.developerakademie.net/elpolloloco/" target="_blank"><button
+                                    class="btn-bg-left">Live test</button></a>
                             <a href="https://github.com/Cristina-Jordi/pollo-loco" target="_blank"><button
                                     class="btn-bg-right">Github</button></a>
                         </div>
@@ -68,7 +70,8 @@
                         <p class="text-portfolio">Based on the PokéAPI a simple library that provides and
                             catalogues pokemon information. </p>
                         <div class="btn-right-portfolio">
-                            <button class="btn-bg-left">Live test</button>
+                            <a href="https://cristina-jordi.developerakademie.net/pokedex/" target="_blank"><button
+                                    class="btn-bg-left">Live test</button></a>
                             <a href="https://github.com/Cristina-Jordi/pokedex" target="_blank"><button
                                     class="btn-bg-right">Github</button></a>
                         </div>
@@ -84,7 +87,8 @@
                             time
                             while enjoying a few drinks. </p>
                         <div class="btn-left-portfolio">
-                            <button class="btn-bg-left">Live test</button>
+                            <a href="https://ring-of-fire-cristina-jordi.web.app" target="_blank"><button
+                                    class="btn-bg-left">Live test</button></a>
                             <a href="https://github.com/Cristina-Jordi/ringoffire" target="_blank"><button
                                     class="btn-bg-right">Github</button></a>
                         </div>
@@ -113,7 +117,8 @@
                 <p class="text-portfolio">Task manager inspired by the Kanban System. Create and organize
                     tasks using drag and drop functions, assign users and categories. </p>
                 <div class="btn-portfolio">
-                    <button class="btn-live-test">Live test</button>
+                    <a href="https://cristina-jordi.developerakademie.net/join/" target="_blank"><button
+                            class="btn-live-test">Live test</button></a>
                     <a href="https://github.com/Cristina-Jordi/join" target="_blank"><button
                             class="btn-github">Github</button></a>
                 </div>
@@ -133,7 +138,8 @@
                     approach. Help Pepe Peligroso to find coins and poisoned salsa bottles
                     to fight against the killer chickens. </p>
                 <div class="btn-portfolio">
-                    <button class="btn-live-test">Live test</button>
+                    <a href="https://cristina-jordi.developerakademie.net/elpolloloco/" target="_blank"><button
+                            class="btn-live-test">Live test</button></a>
                     <a href="https://github.com/Cristina-Jordi/pollo-loco" target="_blank"><button
                             class="btn-github">Github</button></a>
                 </div>
@@ -148,11 +154,11 @@
             <div class="portfolio-text">
                 <h3>Pokédex</h3>
                 <p class="title-portfolio">JavaScript | HTML | CSS | API </p>
-                <p class="text-portfolio">Based on the PokéAPI a simple library that provides and <br>
-                    catalogues
+                <p class="text-portfolio">Based on the PokéAPI a simple library that provides and catalogues
                     pokemon information. </p>
                 <div class="btn-portfolio">
-                    <button class="btn-live-test">Live test</button>
+                    <a href="https://cristina-jordi.developerakademie.net/pokedex/" target="_blank"><button
+                            class="btn-live-test">Live test</button></a>
                     <a href="https://github.com/Cristina-Jordi/pokedex" target="_blank"><button
                             class="btn-github">Github</button></a>
                 </div>
@@ -170,7 +176,8 @@
                     Firebase, and Material Design. It provides a fun way to play with friends and family real time
                     while enjoying a few drinks. </p>
                 <div class="btn-portfolio">
-                    <button class="btn-live-test">Live test</button>
+                    <a href="https://ring-of-fire-cristina-jordi.web.app" target="_blank"><button
+                            class="btn-live-test">Live test</button></a>
                     <a href="https://github.com/Cristina-Jordi/ringoffire" target="_blank"><button
                             class="btn-github">Github</button></a>
                 </div>
