--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,9 +13,9 @@ $bg-color: rgb(20, 29, 47);
     padding: 0;
 }
 
-.full-height {
-    height: 100vh;
-}
+// .full-height {
+//     height: 100vh;
+// }
 
 html {
     scroll-behavior: smooth;
