--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -14,9 +14,7 @@ $red: #FF4747;
     align-items: center;
     padding-left: 10%;
     height: 100vh;
-    margin-top: -162px;
-    // border: 1px solid white;
-
+    margin-top: 20vh;
 
     .about-me-container {
         width: 40%;
@@ -28,7 +26,7 @@ $red: #FF4747;
         p {
             font-family: 'Poppins', sans-serif;
             font-weight: 400;
-            font-size: max(12px, 1.25vw); // ca. 16px
+            font-size: 16px;
             text-align: justify;
             line-height: 122%; // ca. 19px
         }
@@ -133,7 +131,7 @@ $red: #FF4747;
 @media (max-width: 950px) {
 
     .about-me-container-flex {
-        margin-top: -130px;
+        // // margin-top: -130px;
 
         .about-me-container {
             width: 100%;
@@ -141,7 +139,7 @@ $red: #FF4747;
             height: unset;
 
             p {
-                font-size: max(12px, 1.2vw); // ca. 16px
+                font-size: 16px;
                 line-height: 22px;
             }
         }
@@ -163,12 +161,12 @@ $red: #FF4747;
 @media (max-width: 590px) {
 
     .about-me-container-flex {
-        margin-top: -308px;
+        // margin-top: -308px;
 
         .about-me-container {
 
             p {
-                font-size: max(12px, 2.5vw);
+                font-size: 16px;
                 line-height: 21px;
             }
         }
@@ -176,6 +174,11 @@ $red: #FF4747;
     }
 }
 
+@media (min-width: 430px) and (max-width: 590px){
+    .about-me-container-flex{
+        margin-top: 30vh;
+    }
+}
 
 @media (max-width: 430px) {
     .about-me-container-flex {
@@ -200,6 +203,7 @@ $red: #FF4747;
 
 @media (max-width: 390px) {
     .about-me-container-flex {
+        margin-top: 12vh;
 
         .about-me-container {
             margin-top: 400px;
