--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -221,12 +221,44 @@ $orange: #FA7902;
     }
 }
 
-@media (max-width: 850px) {
+@media (min-width: 430px) and (max-width: 950px) {
 
     .footer_container {
-        margin-bottom: 4vw;
+        display: flex;
+        border-top: 4px solid #FA7902;
+        height: 291px;
+        margin-top: 5vh;
+
+        .footer_content_container {
+            .name_container {
+                span {
+                    a {
+                        font-size: max(55px, 5.5vw);
+                    }
+                }
+            }
+
+            .copyright_container {
+                p {
+                    font-size: max(20px, 2vw);
+                }
+            }
+
+            .imprint {
+                a {
+                    font-size: max(17px, 1.8vw);
+                }
+            }
+        }
     }
 }
+
+// @media (max-width: 850px) {
+
+//     .footer_container {
+//         margin-bottom: 4vw;
+//     }
+// }
 
 @media (max-width: 430px) {
     .footer_container {
