--- a/src/app/iam/iam.component.scss
+++ b/src/app/iam/iam.component.scss
@@ -45,7 +45,7 @@ $red: #FF4747;
     position: relative;
 
     .portrait-img {
-        width: 25vw;
+        width: 26vw;
         object-fit: contain;
         transform: scaleX(-1);
     }
@@ -97,28 +97,26 @@ $red: #FF4747;
 
 .social-media-container {
     position: absolute;
-    width: 60%;
+    width: 43%;
     bottom: -9vh;
     left: 0;
     right: 0;
     z-index: 30;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 
     .line-social-media {
         height: 4px;
         width: 130px;
-        margin-right: 30px;
 
     }
 
     img.transition {
         height: 30px;
         object-fit: cover;
-        margin-right: 30px;
-        margin-left: 20px;
-
+        // margin-right: 30px;
+        // margin-left: 20px;
         cursor: pointer;
         transition: all 300ms ease-in-out;
 
@@ -139,7 +137,7 @@ $red: #FF4747;
         text-decoration: none;
         margin-left: 20px;
 
-        img{
+        img {
             outline: none;
         }
 
@@ -302,7 +300,24 @@ $red: #FF4747;
             display: none;
         }
     }
+}
 
+@media (min-width: 430px) and (max-width: 950px) {
+    .iam-text-container {
+        .name-text {
+            font-size: max(28px, 7.5vw);
+        }
+
+        .FD-text {
+            font-size: max(18px, 4.8vw);
+        }
+
+        .iam-text {
+            margin-left: -15%;
+            margin-top: 3.4vw;
+            font-size: max(26px, 4.8vw);
+        }
+    }
 }
 
 @media (max-width: 430px) {
@@ -373,7 +388,7 @@ $red: #FF4747;
         left: 0;
 
         .iam-text-container {
-            margin-top: 111%;
+            margin-top: 104%;
 
             .iam-text {
                 margin-left: -13%;
