finisched and delivered version

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
-<section contact >
+<section contact>
     <div class="contact_container" id="contact">
 
-        <div class="title_contact" >
+        <div class="title_contact">
             <h2>Contact</h2>
 
             <div class="vektor-container-contact">
@@ -19,8 +19,11 @@
                 </p>
 
                 <div class="fade-in-out" [ngClass]="{'show': formSubmitted}">
-                    <p class="thank-you-message">Thank you very much for your message. We will get back to you as soon
-                        as possible!</p>
+                    <div class="thank-you">
+                        <p class="thank-you-message">Thank you very much for your message. <br>We will get back to you
+                            as soon
+                            as possible!</p>
+                    </div>
                 </div>
             </div>
 
