--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,9 +1,8 @@
 .imprint-container {
-    margin-top: 100px; // 8%
+    margin-top: 100px;
     margin-left: 10%;
     margin-right: 10%;
-    margin-bottom: 67px; // -11%;
-    // margin-bottom: 86px; // -11%;
+    margin-bottom: 67px;
 
     h2 {
         font-family: 'Poppins', sans-serif;
