--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,7 +20,7 @@
                         src="../../assets/img/references Icons_line/Linkedin button.png"></a>
             </div>
 
-            <div class="imprint"><a routerLink="/imprint">Imprint</a></div>
+            <div class="imprint"><a href="http://cristina-jordi.developerakademie.net/">Imprint</a></div>
         </div>
     </div>
 </section>
